--- a/index.html
+++ b/index.html
@@ -2,11 +2,110 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+    <title> Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+    <header>
+      <div class="logo">
+        <a href="index.html"><img src="images/Vector-Smart-Object.png" width="139" height="56"></a>
+      </div>
+      <nav class="main-menu">
+        <ul>
+          <li><a href="#studio">Студия</a></li>
+          <li><a href="#clients">Клиенты</a></li>
+          <li><a href="#">Магазин</a></li>
+          <li><a href="#contact">Контакты</a></li>
+        </ul>
+      </nav>
+      <div class="basket">
+        <span>Корзина</span>
+      </div>
+    </header>
+    <main>
+      <div class="slider">
+        <figure>
+          <img class="slider-1" src="images/slider-1.png" width="881" height="231">
+          <img class="slider-2" src="images/slider-2.png" width="871" height="249">
+          <img class="slider-3" src="images/slider-3.png" width="875" height="319">
+        </figure>
+        <a class="btn" href="#">Узнать больше</a>
+      </div>
+      <section class="offers">
+        <ul>
+          <li>
+            <ul class="web-site">
+              <li><img src="images/Layer-10.png" width="240" height="124"></li>
+              <li><b>Веб-сайты</b></li>
+              <li><p>Мир никогда не будет прежним после того как увидит ваш сайт!</p></li>
+              <li><a href="#">Заказать</a></li>
+            </ul>
+            <ul class="apps">
+              <li><img src="images/Layer-11.png" width="240" height="124"></li>
+              <li><b>Веб-сайты</b></li>
+              <li><p>Покорите топ-10 приложений в AppStrore и Google Play</p></li>
+              <li><a href="#">Заказать</a></li>
+            </ul>
+            <ul class="present">
+              <li><img src="images/Layer-12.png" width="240" height="124"></li>
+              <li><b>Веб-сайты</b></li>
+              <li><p>Вы даже не подозреваете, насколько вы изумительны!</p></li>
+              <li><a href="#">Заказать</a></li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section class="studio" id="studio">
+        <header>
+          <div class="motto">
+            <h1>Мы -- маленькая, но гордая дизайн-студия из Краснодара.</h1>
+            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
+          </div>
+          <div class="about-us-logo">
+            <a href="index.html"><img src="images/MergedLayers.png" width="240" height="119"></a>
+          </div>
+        </header>
+        <div class="job">
+          <b>Выполняем заказы на разработку:</b>
+          <ul>
+            <li>Веб-сайтов любой сложности</li>
+            <li>Мобильных приложений для iOS и Android</li>
+            <li>Слайдшоу и видео для корпоративных презентаций</li>
+          </ul>
+          <b>Как мы работаем:</b>
+          <ul>
+            <li>С самоотдачей 146%</li>
+            <li>Соблюдая сроки на 100%</li>
+            <li>По предоплате 50%</li>
+          </ul>
+        </div>
+      </section>
+      <section class="clients" id="clients">
+        <ul>
+          <li>
+            <a href="#"><img src="images/glukhanko.png" width="198" height="37"></a>
+          </li>
+          <li>
+            <a href="#"><img src="images/htmla.png"  width="199" height="68"></a>
+          </li>
+          <li>
+            <a href="#"><img src="images/barbershop.png" width="209" height="86"></a>
+          </li>
+        </ul>
+      </section>
+      <section class="contact" id="contact">
+        
+      </section>
+    </main>
+    <footer>
+        <section class="social">
+          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        </section>
+        <section class="content">
+          <h2>Давайте дружить, это выгодно!</h2>
+          <p>Скидка 10% для друзей из социальных сетей.</p>
+        </section>
+      </footer>
   </body>
 </html>
