--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title> Нёрдс</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header>
       <div class="logo">
-        <a href="index.html"><img src="images/Vector-Smart-Object.png" width="139" height="56"></a>
+        <a href="index.html"><img src="images/Vector-Smart-Object.png" width="139" height="56" alt="logo"></a>
       </div>
       <nav class="main-menu">
         <ul>
@@ -24,36 +25,36 @@
     <main>
       <div class="slider">
         <figure>
-          <img class="slider-1" src="images/slider-1.png" width="881" height="231">
-          <img class="slider-2" src="images/slider-2.png" width="871" height="249">
-          <img class="slider-3" src="images/slider-3.png" width="875" height="319">
+          <img class="slider-1" src="images/slider-1.png" width="881" height="231" alt="slider-1">
+          <img class="slider-2" src="images/slider-2.png" width="871" height="249" alt="slider-2">
+          <img class="slider-3" src="images/slider-3.png" width="875" height="319" alt="slider-3">
         </figure>
         <a class="btn" href="#">Узнать больше</a>
       </div>
-      <section class="offers">
+      <div class="offers">
         <ul>
           <li>
             <ul class="web-site">
-              <li><img src="images/Layer-10.png" width="240" height="124"></li>
+              <li><img src="images/Layer-10.png" width="240" height="124" alt="web-site"></li>
               <li><b>Веб-сайты</b></li>
               <li><p>Мир никогда не будет прежним после того как увидит ваш сайт!</p></li>
               <li><a href="#">Заказать</a></li>
             </ul>
             <ul class="apps">
-              <li><img src="images/Layer-11.png" width="240" height="124"></li>
+              <li><img src="images/Layer-11.png" width="240" height="124" alt="apps"></li>
               <li><b>Веб-сайты</b></li>
               <li><p>Покорите топ-10 приложений в AppStrore и Google Play</p></li>
               <li><a href="#">Заказать</a></li>
             </ul>
             <ul class="present">
-              <li><img src="images/Layer-12.png" width="240" height="124"></li>
+              <li><img src="images/Layer-12.png" width="240" height="124" alt="present"></li>
               <li><b>Веб-сайты</b></li>
               <li><p>Вы даже не подозреваете, насколько вы изумительны!</p></li>
               <li><a href="#">Заказать</a></li>
             </ul>
           </li>
         </ul>
-      </section>
+      </div>
       <section class="studio" id="studio">
         <header>
           <div class="motto">
@@ -61,7 +62,7 @@
             <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
           </div>
           <div class="about-us-logo">
-            <a href="index.html"><img src="images/MergedLayers.png" width="240" height="119"></a>
+            <a href="index.html"><img src="images/MergedLayers.png" width="240" height="119" alt="logo"></a>
           </div>
         </header>
         <div class="job">
@@ -79,29 +80,29 @@
           </ul>
         </div>
       </section>
-      <section class="clients" id="clients">
+      <div class="clients" id="clients">
         <ul>
           <li>
-            <a href="#"><img src="images/glukhanko.png" width="198" height="37"></a>
+            <a href="#"><img src="images/glukhanko.png" width="198" height="37" alt="glukhanko"></a>
           </li>
           <li>
-            <a href="#"><img src="images/htmla.png"  width="199" height="68"></a>
+            <a href="#"><img src="images/htmla.png"  width="199" height="68" alt="htmlacademy"></a>
           </li>
           <li>
-            <a href="#"><img src="images/barbershop.png" width="209" height="86"></a>
+            <a href="#"><img src="images/barbershop.png" width="209" height="86" alt="barbershop"></a>
           </li>
         </ul>
-      </section>
-      <section class="contact" id="contact">
+      </div>
+      <div class="contact" id="contact">
         
-      </section>
+      </div>
     </main>
     <footer>
-        <section class="social">
+        <div class="social">
           <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
           <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-        </section>
+        </div>
         <section class="content">
           <h2>Давайте дружить, это выгодно!</h2>
           <p>Скидка 10% для друзей из социальных сетей.</p>
