--- a/index.html
+++ b/index.html
@@ -7,106 +7,139 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <a href="index.html"><img src="images/Vector-Smart-Object.png" width="139" height="56" alt="logo"></a>
-      </div>
-      <nav class="main-menu">
-        <ul>
-          <li><a href="#studio">Студия</a></li>
-          <li><a href="#clients">Клиенты</a></li>
-          <li><a href="#">Магазин</a></li>
-          <li><a href="#contact">Контакты</a></li>
-        </ul>
-      </nav>
-      <div class="basket">
-        <span>Корзина</span>
+      <div class="container">
+        <div class="logo">
+          <img src="img/logo-header.png" width="139" height="56" alt="logo">
+        </div>
+        <nav class="main-menu">
+          <ul>
+            <li><a href="#studio">Студия</a></li>
+            <li><a href="#clients">Клиенты</a></li>
+            <li><a href="#">Магазин</a></li>
+            <li><a href="#contact">Контакты</a></li>
+            <li class="basket"><a href="#">Корзина</a></li>
+          </ul>
+        </nav>
+        <div class="slider">
+          <figure>
+            <div class="slider-1 slider-active">
+              <ul>
+                <li><h2>Долго, дорого, скрупулезно.</h2></li>
+                <li><p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p></li>
+                <li><a class="btn" href="#">Узнать больше</a></li>
+              </ul>
+              <img src="img/slider-1.png" width="338" height="231" alt="slider-1">
+            </div>
+            <div class="slider-2">
+              <ul>
+                <li><h2>Любите ли вы математику, как любим ее мы?</h2></li>
+                <li><p>Нашим дизайнерам мы удаляем нейроны, ответственные за креатив, чтобы дать им возможность все просчитать</p></li>
+                <li><a class="btn" href="#">Узнать больше</a></li>
+              </ul>
+              <img src="img/slider-2.png" width="330" height="249" alt="slider-1">
+            </div>
+            <div class="slider-3">
+              <ul>
+                <li><h2>Долго, дорого, скрупулезно.</h2></li>
+                <li><p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p></li>
+                <li><a class="btn" href="#">Узнать больше</a></li>
+              </ul>
+              <img src="img/slider-3.png" width="333" height="319" alt="slider-1">
+            </div>
+          </figure>
+        </div>
       </div>
     </header>
     <main>
-      <div class="slider">
-        <figure>
-          <img class="slider-1" src="images/slider-1.png" width="881" height="231" alt="slider-1">
-          <img class="slider-2" src="images/slider-2.png" width="871" height="249" alt="slider-2">
-          <img class="slider-3" src="images/slider-3.png" width="875" height="319" alt="slider-3">
-        </figure>
-        <a class="btn" href="#">Узнать больше</a>
-      </div>
-      <div class="offers">
-        <ul>
-          <li>
-            <ul class="web-site">
-              <li><img src="images/Layer-10.png" width="240" height="124" alt="web-site"></li>
-              <li><b>Веб-сайты</b></li>
-              <li><p>Мир никогда не будет прежним после того как увидит ваш сайт!</p></li>
-              <li><a href="#">Заказать</a></li>
-            </ul>
-            <ul class="apps">
-              <li><img src="images/Layer-11.png" width="240" height="124" alt="apps"></li>
-              <li><b>Веб-сайты</b></li>
-              <li><p>Покорите топ-10 приложений в AppStrore и Google Play</p></li>
-              <li><a href="#">Заказать</a></li>
-            </ul>
-            <ul class="present">
-              <li><img src="images/Layer-12.png" width="240" height="124" alt="present"></li>
-              <li><b>Веб-сайты</b></li>
-              <li><p>Вы даже не подозреваете, насколько вы изумительны!</p></li>
-              <li><a href="#">Заказать</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-      <section class="studio" id="studio">
-        <header>
-          <div class="motto">
-            <h1>Мы -- маленькая, но гордая дизайн-студия из Краснодара.</h1>
-            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
-          </div>
-          <div class="about-us-logo">
-            <a href="index.html"><img src="images/MergedLayers.png" width="240" height="119" alt="logo"></a>
-          </div>
-        </header>
-        <div class="job">
-          <b>Выполняем заказы на разработку:</b>
+      <div class="container">
+        <div class="offers">
           <ul>
-            <li>Веб-сайтов любой сложности</li>
-            <li>Мобильных приложений для iOS и Android</li>
-            <li>Слайдшоу и видео для корпоративных презентаций</li>
-          </ul>
-          <b>Как мы работаем:</b>
-          <ul>
-            <li>С самоотдачей 146%</li>
-            <li>Соблюдая сроки на 100%</li>
-            <li>По предоплате 50%</li>
+            <li>
+              <ul class="web-site">
+                <li><img src="img/offers1.png" width="240" height="124" alt="web-site"></li>
+                <li><b>Веб-сайты</b></li>
+                <li><p>Мир никогда не будет прежним после того как увидит ваш сайт!</p></li>
+                <li><a href="#">Заказать</a></li>
+              </ul>
+              <ul class="apps">
+                <li><img src="img/offers2.png" width="240" height="124" alt="apps"></li>
+                <li><b>Приложения</b></li>
+                <li><p>Покорите топ-10 приложений в AppStrore и Google Play</p></li>
+                <li><a href="#">Заказать</a></li>
+              </ul>
+              <ul class="present">
+                <li><img src="img/offers3.png" width="240" height="124" alt="present"></li>
+                <li><b>Презентации</b></li>
+                <li><p>Вы даже не подозреваете, насколько вы изумительны!</p></li>
+                <li><a href="#">Заказать</a></li>
+              </ul>
+            </li>
           </ul>
         </div>
-      </section>
-      <div class="clients" id="clients">
-        <ul>
-          <li>
-            <a href="#"><img src="images/glukhanko.png" width="198" height="37" alt="glukhanko"></a>
-          </li>
-          <li>
-            <a href="#"><img src="images/htmla.png"  width="199" height="68" alt="htmlacademy"></a>
-          </li>
-          <li>
-            <a href="#"><img src="images/barbershop.png" width="209" height="86" alt="barbershop"></a>
-          </li>
-        </ul>
-      </div>
-      <div class="contact" id="contact">
-        
-      </div>
+        <div class="divide"></div>
+        <div class="studio" id="studio">
+          <div class="left-column">
+            <h2>Мы -- маленькая, но гордая дизайн-студия из Краснодара.</h2>
+            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
+            <b>Выполняем заказы на разработку:</b>
+            <ul>
+              <li>Веб-сайтов любой сложности</li>
+              <li>Мобильных приложений для iOS и Android</li>
+              <li>Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+          </div>
+          <div class="right-column">
+            <img src="img/logo-studio.png" width="187" height="75" alt="logo">
+            <b>Since 2004</b>
+            <b>Как мы работаем:</b>
+            <ul>
+              <li>С самоотдачей 146%</li>
+              <li>Соблюдая сроки на 100%</li>
+              <li>По предоплате 50%</li>
+            </ul>
+          </div>
+        </div>
+        <div class="clients" id="clients">
+          
+          <ul>
+            <li class="glukhanko">
+              <a href="#"><img src="img/glukhango.png"></a>
+            </li>
+            <li class="htmlacademy">
+              <a href="#"><img src="img/htmlacademy.png"></a>
+            </li>
+            <li class="barbershop">
+              <a href="#"><img src="img/barbershop.png"</a>
+            </li>
+          </ul>
+        </div>
+        <div class="divide"></div>
+      </div>  
     </main>
+    <div class="contact" id="contact">
+      <figure>
+        <img class="map" src="img/map.png" width="1199" height="416" alt="map">
+        <img class="marker" src="img/marker.png" width="231" height="190" alt="marker">
+        <div class="write">
+          <b>NЁRDS DESIGN STUDIO</b>
+          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <p>тел. +7 (812) 275-75-75</p>
+          <button type="button">Напишите нам</button>
+        </div>
+      </figure>
+    </div>  
     <footer>
+      <div class="container">
         <div class="social">
           <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
           <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
         </div>
-        <section class="content">
+        <div class="content">
           <h2>Давайте дружить, это выгодно!</h2>
           <p>Скидка 10% для друзей из социальных сетей.</p>
-        </section>
-      </footer>
+        </div>
+      </div>  
+    </footer>
   </body>
 </html>
