--- a/index.html
+++ b/index.html
@@ -15,38 +15,42 @@
           <ul>
             <li><a href="#studio">Студия</a></li>
             <li><a href="#clients">Клиенты</a></li>
-            <li><a href="#">Магазин</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
             <li><a href="#contact">Контакты</a></li>
             <li class="basket"><a href="#">Корзина</a></li>
           </ul>
         </nav>
-        <div class="slider">
-          <figure>
-            <div class="slider-1 slider-active">
-              <ul>
-                <li><h2>Долго, дорого, скрупулезно.</h2></li>
-                <li><p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p></li>
-                <li><a class="btn" href="#">Узнать больше</a></li>
-              </ul>
+        <div class="sliders">
+          <div class="slider slider-1">
+            <div class="slide-left">
+              <h2>Долго, дорого,<br> скрупулезно.</h2>
+              <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+              <a class="btn btn-header" href="#">Узнать больше</a>
+            </div>
+            <div class="slide-right">
               <img src="img/slider-1.png" width="338" height="231" alt="slider-1">
             </div>
-            <div class="slider-2">
-              <ul>
-                <li><h2>Любите ли вы математику, как любим ее мы?</h2></li>
-                <li><p>Нашим дизайнерам мы удаляем нейроны, ответственные за креатив, чтобы дать им возможность все просчитать</p></li>
-                <li><a class="btn" href="#">Узнать больше</a></li>
-              </ul>
+          </div>
+          <div class="slider slider-2">
+            <div class="slide-left">
+              <h2>Любите ли вы математику,<br> как любим ее мы?</h2>
+              <p>Нашим дизайнерам мы удаляем нейроны, ответственные <br>за креатив, чтобы дать им возможность все просчитать</p>
+              <a class="btn btn-header" href="#">Узнать больше</a>
+            </div>
+            <div class="slide-right">
               <img src="img/slider-2.png" width="330" height="249" alt="slider-1">
             </div>
-            <div class="slider-3">
-              <ul>
-                <li><h2>Долго, дорого, скрупулезно.</h2></li>
-                <li><p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p></li>
-                <li><a class="btn" href="#">Узнать больше</a></li>
-              </ul>
+          </div>
+          <div class="slider slider-3">
+            <div class="slide-left">
+              <h2>Только наркотики,<br>только хардкор!</h2>
+              <p>Все дизайнерские решения в нашей компании принимаются <br>только под воздействием качественных галлюциногенов</p>
+              <a class="btn btn-header" href="#">Узнать больше</a>
+            </div>
+            <div class="slide-right">
               <img src="img/slider-3.png" width="333" height="319" alt="slider-1">
             </div>
-          </figure>
+          </div>
         </div>
       </div>
     </header>
@@ -79,7 +83,7 @@
         <div class="divide"></div>
         <div class="studio" id="studio">
           <div class="left-column">
-            <h2>Мы -- маленькая, но гордая дизайн-студия из Краснодара.</h2>
+            <h2>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
             <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
             <b>Выполняем заказы на разработку:</b>
             <ul>
@@ -109,7 +113,7 @@
               <a href="#"><img src="img/htmlacademy.png"></a>
             </li>
             <li class="barbershop">
-              <a href="#"><img src="img/barbershop.png"</a>
+              <a href="#"><img src="img/barbershop.png"></a>>
             </li>
           </ul>
         </div>
@@ -141,5 +145,6 @@
         </div>
       </div>  
     </footer>
+    <script src="slider.js" type="text/javascript"></script>
   </body>
 </html>
