--- a/catalog.html
+++ b/catalog.html
@@ -3,29 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title> Нёрдс</title>
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:500&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <header>
-      <div class="container">
-        <div class="logo">
-          <img src="img/logo-header.png" width="139" height="56" alt="logo">
-        </div>
+    <header class="catalog">
+      <div class="container clearfix">
         <nav class="main-menu">
-          <ul>
+          <a class="left-column logo" href="/index.html"><img src="img/logo-header.png" width="139" height="56" alt="logo"></a>
+          <ul class="right-column main-menu">
             <li><a href="index.html#studio">Студия</a></li>
             <li><a href="index.html#clients">Клиенты</a></li>
-            <li><a href="#">Магазин</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
             <li><a href="index.html#contact">Контакты</a></li>
-            <li class="basket"><a href="#">Корзина</a></li>
+            <li><a class="basket"href="#">Корзина</a></li>
           </ul>
         </nav>
-        <h1>Добро пожаловать в магазин готовых макетов</h1>
       </div>
+        <h1 class="uppercase">Добро пожаловать в магазин<br> готовых макетов</h1>
     </header>
     <main>
-      <div class="container">
-        <form method="post" name="filtr">
+      <div class="container clearfix">
+        <form class="left-column" method="post" name="filtr">
           <b>Стоимость:</b>
           <div class="range">
           
@@ -55,36 +55,46 @@
           <label for="basket">Корзина</label>
           <a type="">Показать</a>
         </form>
-        <div class="sort">
-          <p>Сортировать:</p>
-          <a href="#">По цене</a>
-          <a href="#">По типу</a>
-          <a href="#">По функционалу</a>
-          <a href="#"></a>
-          <a href="#"></a>
+        <div class="right-column">
+          <div class="sort">
+            <p>Сортировать:</p>
+            <a href="#">По цене</a>
+            <a href="#">По типу</a>
+            <a href="#">По функционалу</a>
+            <a href="#"></a>
+            <a href="#"></a>
+          </div>
+          <ul class="items">
+            <li><img src="img/aviator.png" width="240" height="240"></li>
+            <li><img src="img/sqspc2-1.png" width="240" height="240"></li>
+            <li><img src="img/forte.png" width="240" height="240"></li>
+            <li><img src="img/marque.png" width="240" height="240"></li>
+            <li><img src="img/avenue.png" width="240" height="240"></li>
+            <li><img src="img/dovetail.png" width="240" height="240"></li>
+          </ul>
         </div>
       </div>
     </main>
     <div class="contact" id="contact">
-      <figure>
-        <img class="map" src="img/map.png" width="1199" height="416" alt="map">
-        <img class="marker" src="img/marker.png" width="231" height="190" alt="marker">
-        <div class="write">
-          <b>NЁRDS DESIGN STUDIO</b>
-          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-          <p>тел. +7 (812) 275-75-75</p>
-          <button type="button">Напишите нам</button>
+      <!--<img class="map" src="img/map.png" width="1199" height="416" alt="map">-->
+        <div class="container clearfix">
+          <div class="left-column write">
+            <b>NЁRDS DESIGN STUDIO</b>
+            <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
+            <p>тел. +7 (812) 275-75-75</p>
+            <a class="btn" href="#">Напишите нам</a>
+          </div>
+          <img class="right-column marker" src="img/marker.png" width="231" height="190" alt="marker">
         </div>
-      </figure>
     </div>  
     <footer>
-      <div class="container">
-        <div class="social">
+      <div class="container clearfix">
+        <div class="left-column social">
           <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
           <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
         </div>
-        <div class="content">
+        <div class="right-column content">
           <h2>Давайте дружить, это выгодно!</h2>
           <p>Скидка 10% для друзей из социальных сетей.</p>
         </div>
