--- a/index.html
+++ b/index.html
@@ -3,89 +3,102 @@
   <head>
     <meta charset="utf-8">
     <title> Нёрдс</title>
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:500&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <header>
-      <div class="container">
-        <div class="logo">
-          <img src="img/logo-header.png" width="139" height="56" alt="logo">
-        </div>
+    <header class="main">
+      <div class="container clearfix">
         <nav class="main-menu">
-          <ul>
+          <a class="left-column logo" href="/index.html"><img src="img/logo-header.png" width="139" height="56" alt="logo"></a>
+          <ul class="right-column main-menu">
             <li><a href="#studio">Студия</a></li>
             <li><a href="#clients">Клиенты</a></li>
             <li><a href="catalog.html">Магазин</a></li>
             <li><a href="#contact">Контакты</a></li>
-            <li class="basket"><a href="#">Корзина</a></li>
+            <li><a class="basket"href="#"><span class="icon-basket"></span> Корзина</a></li>
           </ul>
         </nav>
+      </div>
+      <div class="container clearfix">
+      <div class="slider-slider">
+       
+          <input type="radio" name="swith" id="btn-1">
+          <input type="radio" name="swith" id="btn-2">
+          <input type="radio" name="swith" id="btn-3">
+        <div class="swith"> 
+          <label for="btn-1"></label>
+          <label for="btn-2"></label>
+          <label for="btn-3"></label>
+        </div>
+        <div class="slider-inner">
         <div class="sliders">
           <div class="slider slider-1">
-            <div class="slide-left">
+            <div class="left-column">
               <h2>Долго, дорого,<br> скрупулезно.</h2>
               <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
               <a class="btn btn-header" href="#">Узнать больше</a>
             </div>
-            <div class="slide-right">
+            <div class="right-column">
               <img src="img/slider-1.png" width="338" height="231" alt="slider-1">
             </div>
           </div>
           <div class="slider slider-2">
-            <div class="slide-left">
+            <div class="left-column">
               <h2>Любите ли вы математику,<br> как любим ее мы?</h2>
               <p>Нашим дизайнерам мы удаляем нейроны, ответственные <br>за креатив, чтобы дать им возможность все просчитать</p>
               <a class="btn btn-header" href="#">Узнать больше</a>
             </div>
-            <div class="slide-right">
+            <div class="right-column">
               <img src="img/slider-2.png" width="330" height="249" alt="slider-1">
             </div>
           </div>
           <div class="slider slider-3">
-            <div class="slide-left">
+            <div class="left-column">
               <h2>Только наркотики,<br>только хардкор!</h2>
               <p>Все дизайнерские решения в нашей компании принимаются <br>только под воздействием качественных галлюциногенов</p>
               <a class="btn btn-header" href="#">Узнать больше</a>
             </div>
-            <div class="slide-right">
+            <div class="right-column">
               <img src="img/slider-3.png" width="333" height="319" alt="slider-1">
             </div>
           </div>
         </div>
+        </div>
+      </div>
       </div>
     </header>
     <main>
       <div class="container">
-        <div class="offers">
-          <ul>
-            <li>
-              <ul class="web-site">
-                <li><img src="img/offers1.png" width="240" height="124" alt="web-site"></li>
-                <li><b>Веб-сайты</b></li>
-                <li><p>Мир никогда не будет прежним после того как увидит ваш сайт!</p></li>
-                <li><a href="#">Заказать</a></li>
-              </ul>
-              <ul class="apps">
-                <li><img src="img/offers2.png" width="240" height="124" alt="apps"></li>
-                <li><b>Приложения</b></li>
-                <li><p>Покорите топ-10 приложений в AppStrore и Google Play</p></li>
-                <li><a href="#">Заказать</a></li>
-              </ul>
-              <ul class="present">
-                <li><img src="img/offers3.png" width="240" height="124" alt="present"></li>
-                <li><b>Презентации</b></li>
-                <li><p>Вы даже не подозреваете, насколько вы изумительны!</p></li>
-                <li><a href="#">Заказать</a></li>
-              </ul>
+        <div class="offers ">
+          <ul class="clearfix">
+            <li class="left-column">
+              <img src="img/offers1.png" width="240" height="124" alt="web-site">
+              <b>Веб-сайты</b>
+              <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
+              <a class="btn btn-mini" href="#">Заказать</a>
+            </li>
+            <li class="left-column">  
+              <img src="img/offers2.png" width="240" height="124" alt="apps">
+              <b>Приложения</b>
+              <p>Покорите топ-10 приложений<br> в AppStrore и Google Play</p>
+              <a class="btn btn-mini btn-green" href="#">Заказать</a>
+            </li>
+            <li class="right-column">
+              <img src="img/offers3.png" width="240" height="124" alt="present">
+              <b>Презентации</b>
+              <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
+              <a class="btn btn-mini btn-yellow" href="#">Заказать</a>
             </li>
           </ul>
         </div>
         <div class="divide"></div>
-        <div class="studio" id="studio">
+        <div class="clearfix studio" id="studio">
           <div class="left-column">
-            <h2>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
-            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
-            <b>Выполняем заказы на разработку:</b>
+            <h2>Мы - маленькая, но гордая<br> дизайн-студия из Краснодара.</h2>
+            <p>Исповедуем принципы минимализма и чистоты. Ставим математический<br> расчет выше креатива. Работаем не покладая рук, как роботы.</p>
+            <p class="uppercase">Выполняем заказы на разработку:</p>
             <ul>
               <li>Веб-сайтов любой сложности</li>
               <li>Мобильных приложений для iOS и Android</li>
@@ -94,8 +107,8 @@
           </div>
           <div class="right-column">
             <img src="img/logo-studio.png" width="187" height="75" alt="logo">
-            <b>Since 2004</b>
-            <b>Как мы работаем:</b>
+            <p class="center uppercase">Since 2004</p>
+            <p class="down uppercase">Как мы работаем:</p>
             <ul>
               <li>С самоотдачей 146%</li>
               <li>Соблюдая сроки на 100%</li>
@@ -113,7 +126,7 @@
               <a href="#"><img src="img/htmlacademy.png"></a>
             </li>
             <li class="barbershop">
-              <a href="#"><img src="img/barbershop.png"></a>>
+              <a href="#"><img src="img/barbershop.png"></a>
             </li>
           </ul>
         </div>
@@ -121,25 +134,25 @@
       </div>  
     </main>
     <div class="contact" id="contact">
-      <figure>
-        <img class="map" src="img/map.png" width="1199" height="416" alt="map">
-        <img class="marker" src="img/marker.png" width="231" height="190" alt="marker">
-        <div class="write">
-          <b>NЁRDS DESIGN STUDIO</b>
-          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-          <p>тел. +7 (812) 275-75-75</p>
-          <button type="button">Напишите нам</button>
+      <!--<img class="map" src="img/map.png" width="1199" height="416" alt="map">-->
+        <div class="container clearfix">
+          <div class="left-column write">
+            <b>NЁRDS DESIGN STUDIO</b>
+            <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
+            <p>тел. +7 (812) 275-75-75</p>
+            <a class="btn" href="#">Напишите нам</a>
+          </div>
+          <img class="right-column marker" src="img/marker.png" width="231" height="190" alt="marker">
         </div>
-      </figure>
     </div>  
     <footer>
-      <div class="container">
-        <div class="social">
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+      <div class="container clearfix">
+        <div class="left-column social">
+          <a class="social-btn social-btn-vk" href="#"><span class="icon-vk"></span></a>
+          <a class="social-btn social-btn-fb" href="#"><span class="icon-facebook"></span></a>
+          <a class="social-btn social-btn-inst" href="#"><span class="icon-instagramm"></span></a>
         </div>
-        <div class="content">
+        <div class="right-column content">
           <h2>Давайте дружить, это выгодно!</h2>
           <p>Скидка 10% для друзей из социальных сетей.</p>
         </div>
