--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
           <ul class="right-column main-menu">
             <li><a href="index.html#studio">Студия</a></li>
             <li><a href="index.html#clients">Клиенты</a></li>
-            <li><a href="catalog.html">Магазин</a></li>
+            <li class="active"><a href="catalog.html">Магазин</a></li>
             <li><a href="index.html#contact">Контакты</a></li>
             <li><a class="basket"href="#">Корзина</a></li>
           </ul>
@@ -90,9 +90,9 @@
     <footer>
       <div class="container clearfix">
         <div class="left-column social">
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          <a class="social-btn social-btn-vk" href="#"><span class="icon-vk"></span></a>
+          <a class="social-btn social-btn-fb" href="#"><span class="icon-facebook"></span></a>
+          <a class="social-btn social-btn-inst" href="#"><span class="icon-instagramm"></span></a>
         </div>
         <div class="right-column content">
           <h2>Давайте дружить, это выгодно!</h2>
