--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
             <li><a href="index.html#clients">Клиенты</a></li>
             <li class="active"><a href="catalog.html">Магазин</a></li>
             <li><a href="index.html#contact">Контакты</a></li>
-            <li><a class="basket"href="#">Корзина</a></li>
+            <li><a class="basket"href="#"><span class="icon-basket"></span> Корзина</a></li>
           </ul>
         </nav>
       </div>
@@ -100,5 +100,6 @@
         </div>
       </div>  
     </footer>
+    
   </body>
 </html>
