--- a/catalog.html
+++ b/catalog.html
@@ -11,13 +11,13 @@
     <header class="catalog">
       <div class="container">
         <nav class="main-menu clearfix">
-          <a class="left-column logo" href="/index.html"><img src="img/logo-header.png" width="139" height="56" alt="logo"></a>
+          <a class="left-column logo" href="index.html"><img src="img/logo-header.png" width="139" height="56" alt="logo"></a>
           <ul class="right-column main-menu">
             <li><a href="index.html#studio">Студия</a></li>
             <li><a href="index.html#clients">Клиенты</a></li>
             <li><a href="catalog.html">Магазин</a></li>
             <li><a href="index.html#contact">Контакты</a></li>
-            <li><a class="basket"href="#"><span class="icon-basket"></span> Корзина</a></li>
+            <li><a class="basket" href="#"><span class="icon-basket"></span> Корзина</a></li>
           </ul>
         </nav>
       </div>
@@ -50,7 +50,7 @@
           <label class="radio" for="rubber">
              Резиновая
           </label>
-          <b>Особенности:</b>
+          <b class="features">Особенности:</b>
           <input type="checkbox" id="slider" name="slider" value="slider" checked>
           <label class="checkbox" for="slider">
              Слайдер
@@ -79,13 +79,15 @@
             <a href="#">По цене</a>
             <a href="#">По типу</a>
             <a href="#">По функционалу</a>
-            <a class="up" href="#"><span class="icon-up-dir"></span></a>
             <a class="down" href="#"><span class="icon-down-dir"></span></a>
+            <a class="up" href="#"><span class="icon-up-dir"></span></a>
           </div>
           <div class="items">
             <ul>
               <li>
-                <div class="head"></div>
+                <div class="head">
+                  <div class="circle"></div>
+                </div>
                 <img src="img/aviator.png" width="240" height="240">
                 <div class="price">
                   <b>Aviator</b>
@@ -144,7 +146,6 @@
               <a href="#">2</a>
               <a href="#">3</a>
               <a class="next" href="#">Следующая</a>
-              
             </div>
           </div>
         </div>
