--- a/index.html
+++ b/index.html
@@ -11,50 +11,50 @@
     <header class="main">
       <div class="container">
         <nav class="main-menu clearfix">
-          <a class="left-column logo" href="/index.html"><img src="img/logo-header.png" width="139" height="56" alt="logo"></a>
+          <a class="left-column logo" href="index.html"><img src="img/logo-header.png" width="139" height="56" alt="logo"></a>
           <ul class="right-column main-menu">
             <li><a href="#studio">Студия</a></li>
             <li><a href="#clients">Клиенты</a></li>
             <li><a href="catalog.html">Магазин</a></li>
             <li><a href="#contact">Контакты</a></li>
-            <li><a class="basket"href="#"><span class="icon-basket"></span> Корзина</a></li>
+            <li><a class="basket" href="#"><span class="icon-basket"></span> Корзина</a></li>
           </ul>
         </nav>
       </div>
       <div class="container clearfix">
-      <div class="slider">
-        <input type="radio" id="btn-1" name="toggle" checked>
-        <input type="radio" id="btn-2" name="toggle">
-        <input type="radio" id="btn-3" name="toggle">
-        <div class="slider-controls">
-          <label for="btn-1"></label>
-          <label for="btn-2"></label>
-          <label for="btn-3"></label>
+        <div class="slider">
+          <input type="radio" id="btn-1" name="toggle" checked>
+          <input type="radio" id="btn-2" name="toggle">
+          <input type="radio" id="btn-3" name="toggle">
+          <div class="slider-controls">
+            <label for="btn-1"></label>
+            <label for="btn-2"></label>
+            <label for="btn-3"></label>
+          </div>
+          <div class="slides">
+            <div class="slide">
+              <div class="slide-text">
+                <h2>Долго, дорого,<br>скрупулезно.</h2>
+                <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
+                <a class="btn btn-header btn-red" href="#">Узнать больше</a>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="slide-text">
+                <h2>Любите ли вы математику,<br> как любим ее мы?</h2>
+                <p>Нашим дизайнерам мы удаляем нейроны, ответственные<br>за креатив, чтобы дать им возможность все просчитать.</p>
+                <a class="btn btn-header btn-red" href="#">Узнать больше</a>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="slide-text">
+                <h2>Только наркотики,<br> только хардкор!</h2>
+                <p>Все дизайнерские решения в нашей компании принимаются только под воздействием качественных галлюциногенов.</p>
+                <a class="btn btn-header btn-red" href="#">Узнать больше</a>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="slides">
-          <div class="slide">
-            <div class="slide-text">
-              <h2>Долго, дорого,<br>скрупулезно</h2>
-              <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
-              <a class="btn btn-header btn-red" href="#">Узнать больше</a>
-            </div>
-          </div>
-          <div class="slide">
-            <div class="slide-text">
-              <h2>Любите ли вы математику,<br> как любим ее мы?</h2>
-              <p>Нашим дизайнерам мы удаляем нейроны, ответственные<br>за креатив, чтобы дать им возможность все просчитать.</p>
-              <a class="btn btn-header btn-red" href="#">Узнать больше</a>
-            </div>
-          </div>
-          <div class="slide">
-            <div class="slide-text">
-              <h2>Только наркотики,<br> только хардкор!</h2>
-              <p>Все дизайнерские решения в нашей компании принимаются только под воздействием качественных галлюциногенов.</p>
-              <a class="btn btn-header btn-red" href="#">Узнать больше</a>
-            </div>
-          </div>
-        </div>
-      </div>
       </div>
     </header>
     <main>
@@ -83,7 +83,7 @@
         </div>
         <div class="clearfix studio" id="studio">
           <div class="left-column">
-            <h2>Мы - маленькая, но гордая<br> дизайн-студия из Краснодара.</h2>
+            <h2>Мы — маленькая, но гордая<br> дизайн-студия из Краснодара.</h2>
             <p>Исповедуем принципы минимализма и чистоты. Ставим математический<br> расчет выше креатива. Работаем не покладая рук, как роботы.</p>
             <h3>Выполняем заказы на разработку:</h3>
             <ul>
@@ -96,15 +96,14 @@
             <img src="img/logo-studio.png" width="187" height="75" alt="logo">
             <p class="center uppercase">Since 2004</p>
             <h3 class="down">Как мы работаем:</h3>
-            <ul>
-              <li>С самоотдачей 146%</li>
-              <li>Соблюдая сроки на 100%</li>
-              <li>По предоплате 50%</li>
+            <ul >
+              <li class="right-li">С самоотдачей 146%</li>
+              <li class="right-li">Соблюдая сроки на 100%</li>
+              <li class="right-li">По предоплате 50%</li>
             </ul>
           </div>
         </div>
         <div class="clients" id="clients">
-          
           <ul>
             <li class="glukhanko">
               <a href="#"><img src="img/glukhango.png"></a>
