--- a/catalog.html
+++ b/catalog.html
@@ -96,7 +96,9 @@
                 </div>
               </li>
               <li>
-                <div class="head"></div>
+                <div class="head">
+                  <div class="circle"></div>
+                </div>
                 <img src="img/sqspc2-1.png" width="240" height="240">
                 <div class="price">
                   <b>Sunset</b>
@@ -105,7 +107,9 @@
                 </div>
               </li>
               <li>
-                <div class="head"></div>
+                <div class="head">
+                  <div class="circle"></div>
+                </div>
                 <img src="img/forte.png" width="240" height="240">
                 <div class="price">
                   <b>Forte</b>
@@ -114,7 +118,9 @@
                 </div>
               </li>
               <li>
-                <div class="head"></div>
+                <div class="head">
+                  <div class="circle"></div>
+                </div>
                 <img src="img/marque.png" width="240" height="240">
                 <div class="price">
                   <b>Modern organic tha!</b>
@@ -123,7 +129,9 @@
                 </div>
               </li>
               <li>
-                <div class="head"></div>
+                <div class="head">
+                  <div class="circle"></div>
+                </div>
                 <img src="img/avenue.png" width="240" height="240">
                 <div class="price">
                   <b>Avenue</b>
@@ -132,7 +140,9 @@
                 </div>
               </li>
               <li>
-                <div class="head"></div>
+                <div class="head">
+                  <div class="circle"></div>
+                </div>
                 <img src="img/dovetail.png" width="240" height="240">
                 <div class="price">
                   <b>Dovetail</b>
