--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             <p>Исповедуем принципы минимализма и чистоты. Ставим математический<br> расчет выше креатива. Работаем не покладая рук, как роботы.</p>
             <h3>Выполняем заказы на разработку:</h3>
             <ul>
-              <li>Веб-сайтов любой сложности</li>
-              <li>Мобильных приложений для iOS и Android</li>
-              <li>Слайдшоу и видео для корпоративных презентаций</li>
+              <li class="left-li">Веб-сайтов любой сложности</li>
+              <li class="left-li">Мобильных приложений для iOS и Android</li>
+              <li class="left-li">Слайдшоу и видео для корпоративных презентаций</li>
             </ul>
           </div>
           <div class="right-column">
@@ -119,16 +119,15 @@
       </div>  
     </main>
     <div class="contact" id="contact">
-      <!--<img class="map" src="img/map.png" width="1199" height="416" alt="map">-->
-        <div class="container clearfix">
-          <div class="left-column write">
-            <b>NЁRDS DESIGN STUDIO</b>
-            <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
-            <p>тел. +7 (812) 275-75-75</p>
-            <a class="write-us btn btn-red" href="mail.html">Напишите нам</a>
-          </div>
-          <img class="right-column marker" src="img/marker.png" width="231" height="190" alt="marker">
+      <div class="container clearfix">
+        <div class="left-column write">
+          <b>NЁRDS DESIGN STUDIO</b>
+          <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
+          <p>тел. +7 (812) 275-75-75</p>
+          <a class="write-us btn btn-red" href="mail.html">Напишите нам</a>
         </div>
+        <img class="right-column marker" src="img/marker.png" width="231" height="190" alt="marker">
+      </div>
     </div>  
     <footer>
       <div class="container clearfix">
@@ -148,8 +147,7 @@
       
       <a class="modal-close" href="index.html"></a>
       <div class="modal-container">
-        
-          <form method="post">
+        <form method="post">
             <div class="clearfix">
               <div class="left-column">
                 <label for="name">
