--- a/catalog.html
+++ b/catalog.html
@@ -88,7 +88,7 @@
                 <div class="head">
                   <div class="circle"></div>
                 </div>
-                <img src="img/aviator.png" width="240" height="240">
+                <img src="img/aviator.png" width="240" height="240" alt="aviator">
                 <div class="price">
                   <b>Aviator</b>
                   <p class="aviator">Одностраничный макет с авторским дизайном</p>
@@ -99,7 +99,7 @@
                 <div class="head">
                   <div class="circle"></div>
                 </div>
-                <img src="img/sqspc2-1.png" width="240" height="240">
+                <img src="img/sqspc2-1.png" width="240" height="240" alt="sqspc">
                 <div class="price">
                   <b>Sunset</b>
                   <p>Интернет-магазин с личным кабинетом</p>
@@ -110,7 +110,7 @@
                 <div class="head">
                   <div class="circle"></div>
                 </div>
-                <img src="img/forte.png" width="240" height="240">
+                <img src="img/forte.png" width="240" height="240" alt="forte">
                 <div class="price">
                   <b>Forte</b>
                   <p>Отличный макет для личного блога</p>
@@ -121,7 +121,7 @@
                 <div class="head">
                   <div class="circle"></div>
                 </div>
-                <img src="img/marque.png" width="240" height="240">
+                <img src="img/marque.png" width="240" height="240" alt="marque">
                 <div class="price">
                   <b>Modern organic tha!</b>
                   <p class="modern">Сайт для ресторана быстрого питания</p>
@@ -132,7 +132,7 @@
                 <div class="head">
                   <div class="circle"></div>
                 </div>
-                <img src="img/avenue.png" width="240" height="240">
+                <img src="img/avenue.png" width="240" height="240" alt="avenue">
                 <div class="price">
                   <b>Avenue</b>
                   <p>Макет для блога о путешествиях</p>
@@ -143,7 +143,7 @@
                 <div class="head">
                   <div class="circle"></div>
                 </div>
-                <img src="img/dovetail.png" width="240" height="240">
+                <img src="img/dovetail.png" width="240" height="240" alt="dovetail">
                 <div class="price">
                   <b>Dovetail</b>
                   <p>Интернет-магазин с галереей товаров</p>
@@ -162,7 +162,6 @@
       </div>
     </main>
     <div class="contact" id="contact">
-      <!--<img class="map" src="img/map.png" width="1199" height="416" alt="map">-->
         <div class="container clearfix">
           <div class="left-column write">
             <b>NЁRDS DESIGN STUDIO</b>
@@ -170,7 +169,6 @@
             <p>тел. +7 (812) 275-75-75</p>
             <a class="write-us btn btn-red" href="mail.html">Напишите нам</a>
           </div>
-          <img class="right-column marker" src="img/marker.png" width="231" height="190" alt="marker">
         </div>
     </div>  
     <footer>
