--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
         <div class="clients" id="clients">
           <ul>
             <li class="glukhanko">
-              <a href="#"><img src="img/glukhango.png"></a>
+              <a href="#"><img src="img/glukhango.png" alt="glukango"></a>
             </li>
             <li class="htmlacademy">
-              <a href="#"><img src="img/htmlacademy.png"></a>
+              <a href="#"><img src="img/htmlacademy.png" alt="htmlacademy"></a>
             </li>
             <li class="barbershop">
-              <a href="#"><img src="img/barbershop.png"></a>
+              <a href="#"><img src="img/barbershop.png" alt="barbershop"></a>
             </li>
           </ul>
         </div>
@@ -126,7 +126,6 @@
           <p>тел. +7 (812) 275-75-75</p>
           <a class="write-us btn btn-red" href="mail.html">Напишите нам</a>
         </div>
-        <img class="right-column marker" src="img/marker.png" width="231" height="190" alt="marker">
       </div>
     </div>  
     <footer>
@@ -144,8 +143,7 @@
     </footer>
     <div class="modal-overlay"></div>
     <div class="modal">
-      
-      <a class="modal-close" href="index.html"></a>
+    <a class="modal-close" href="index.html"></a>
       <div class="modal-container">
         <form method="post">
             <div class="clearfix">
